(fix) front cover image not centered

--- a/components/envelope/style.scss
+++ b/components/envelope/style.scss
@@ -130,6 +130,7 @@ $transition-duration: 1.5s;
         max-width: 90%;
         position: relative;
         top: 5%;
+        left: 10%;
         filter: drop-shadow(0px 0px 5px #000);
       }
     }
